StringUtils.StripToNull 적용